--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<title>Page Transitions with CSS3</title>
+		<title>Анкета-резюме Боков Дмитрий</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -21,7 +21,7 @@
 				
 		<!-- Home -->
 		<div id="home" class="content">
-			<h2>Home</h2>
+			<h2>Боков Дмитрий Алексеевич</h2>
 			<p>So you want a single page website, uh? Well, if you follow this tutorial you will be able to create a very nifty one-pager. Check out the rest of the sections on this page so you can see for yourself what am I talking about.</p>
 			<p>This page consists of different panels that will slide or appear when clicking on the respective link.</p>
 			<p>With the general sibling selector we can change the color of the "selected" panel link.</p>
@@ -31,7 +31,7 @@
 		<!-- Portfolio -->
 		<div id="portfolio" class="panel">
 			<div class="content">
-				<h2>Portfolio</h2>
+				<h2>Портфолио</h2>
 				<p>Some really nice portfolio shots:</p>
 				<ul id="works">
 					<li><a href=""><img src="images/portfolio_01.jpeg" width="250"></a></li>
@@ -58,7 +58,7 @@
 		<!-- Contact -->
 		<div id="contact" class="panel">
 			<div class="content">
-				<h2>Contact</h2>
+				<h2>Контакты</h2>
 				<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
 				<p>Pityful a rethoric question ran over her cheek, then she continued her way. On her way she met a copy.</p>
 				<form id="form">
