--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
 <!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if IE 10 ]>    <html class="ie ie10 no-js" lang="en"> <![endif]-->
+<!--[if IE 11 ]>    <html class="ie ie11 no-js" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
 	<head>
 		<meta charset="UTF-8" />
