--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				
 		<!-- Home -->
 		<div id="home" class="content">
-			<h1>Боков Дмитрий Алексеевич</h1>
+			<h2>Резюме</h2>
 			<p>So you want a single page website, uh? Well, if you follow this tutorial you will be able to create a very nifty one-pager. Check out the rest of the sections on this page so you can see for yourself what am I talking about.</p>
 			<p>This page consists of different panels that will slide or appear when clicking on the respective link.</p>
 			<p>With the general sibling selector we can change the color of the "selected" panel link.</p>
