--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<!-- Home -->
 		<div id="home" class="content">
 			<h2>Резюме</h2>
-			<p>So you want a single page website, uh? Well, if you follow this tutorial you will be able to create a very nifty one-pager. Check out the rest of the sections on this page so you can see for yourself what am I talking about.</p>
-			<p>This page consists of different panels that will slide or appear when clicking on the respective link.</p>
-			<p>With the general sibling selector we can change the color of the "selected" panel link.</p>
+			<p>Добрый день!</p>
+			<p>Всю необходимую информацию Вы сможете получить на этом сайте</p>
+			<p>С наилучшими пожеланиями!</p>
 		</div>
 		<!-- /Home -->
 		
@@ -28,7 +28,7 @@
 		<div id="portfolio" class="panel">
 			<div class="content">
 				<h2>Портфолио</h2>
-				<p>Some really nice portfolio shots:</p>
+				<p>Некоторые работы:</p>
 				<ul id="works">
 					<li><a href=""><img src="images/portfolio_01.jpeg" width="250"></a></li>
 					<li><a href=""><img src="images/portfolio_02.jpeg" width="250"></a></li>
@@ -42,7 +42,7 @@
 		<!-- About -->
 		<div id="about" class="panel">
 			<div class="content">
-				<h2>About</h2>
+				<h2>Обо мне</h2>
 				<p>It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 				<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 				<p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
@@ -68,12 +68,12 @@
 		
 		<!-- Header with Navigation -->
 		<div id="header">
-			<h1>Page Transitions with CSS3</h1>
+			<h1>Анкета-резюме Боков Дмитрий</h1>
 			<ul id="navigation">
-				<li><a id="link-home" href="#home">Home</a></li>
-				<li><a id="link-portfolio" href="#portfolio">Portfolio</a></li>
-				<li><a id="link-about" href="#about">About Me</a></li>
-				<li><a id="link-contact" href="#contact">Contact</a></li>
+				<li><a id="link-home" href="#home">На главную</a></li>
+				<li><a id="link-portfolio" href="#portfolio">Портфолио</a></li>
+				<li><a id="link-about" href="#about">Обо мне</a></li>
+				<li><a id="link-contact" href="#contact">Контакты</a></li>
 			</ul>
 			<!-- Demo Nav -->
 			<nav id="codrops-demos">
