--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		
 		<!-- Header with Navigation -->
 		<div id="header">
-			<h1>Анкета-резюме Боков Дмитрий</h1>
+			<h1>Боков Дмитрий Алексеевич</h1>
 			<ul id="navigation">
 				<li><a id="link-home" href="#home">На главную</a></li>
 				<li><a id="link-portfolio" href="#portfolio">Портфолио</a></li>
